samples/_failures_safe/1761407330_ec3132_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d27be4f0.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_d27be4f0.c:178:18: error: missing terminating " character
  178 |         "START", "READ
      |                  ^~~~~
./samples/SAFE/__tmp_d27be4f0.c:178:9: error: expected expression at end of input
  178 |         "START", "READ
      |         ^~~~~~~
./samples/SAFE/__tmp_d27be4f0.c:178:9: error: expected declaration or statement at end of input
